--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
         "notifications",
         "http://*.kickstarter.com/*"
     ],
-
+    "options_page": "html/options.html",
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "content_scripts": [
         {
