Desktop Notifications, fixed link to project, fixed data exchange between background page and popup, added forgotten fonts in previous commit.

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,9 @@
         "16"    : "images/Icon-Small.png",
         "48"    : "images/Icon-Small-50.png"
     },
+    "web_accessible_resources": [
+        "images/Icon-Small-48.png"
+    ],
     "permissions": [
         "alarms",
         "tabs",
